# restaurant_operations_management_system

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
apps/server/: Cargo.toml
apps/server/migrations/: 20260713084820_create_users.up.sql  20260713090040_tighten_users_validation.down.sql  20260713090040_tighten_users_validation.up.sql  20260713091007_create_roles_and_user_roles.down.sql  20260713091007_create_roles_and_user_roles.up.sql  20260713160141_create_user_sessions.down.sql  20260713160141_create_user_sessions.up.sql
apps/server/src/: app.rs  config.rs  health.rs  main.rs  state.rs
apps/server/src/auth/: dto.rs  error.rs  handler.rs  mod.rs  password.rs  repository.rs  service.rs  session.rs
apps/server/src/database/: init.rs  mod.rs
apps/web/: README.md
