[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
argon2 = "0.6.0-rc.8"
axum = "0.8.9"
dotenvy = "0.15.7"
password-hash = { version = "0.6.1", features = ["rand_core"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros"] }
